--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
                     <div class="col-lg-12">
                         <nav class="navbar navbar-expand-lg">
                             <a class="navbar-brand" href="index.html">
-                                <h6>Asad</h6>
+                                <img src="assets/images/asad-removebg-preview.png" alt="Logo"
+                                    style="height: 60px; width: 150px;">
                             </a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse"
                                 data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -149,7 +150,7 @@
             <div class="row align-items-center justify-content-center">
                 <div class="col-lg-6 col-md-9">
                     <div class="about_image mt-50 wow fadeInRightBig" data-wow-duration="1.3s" data-wow-delay="0.5s">
-                        <img src="assets/images/about_hero.png" alt="Hero">
+                        <img src="assets/images/asad-removebg-preview.png" alt="Hero">
                         <div class="about_shape"></div>
                     </div> <!-- about image -->
                 </div>
@@ -479,7 +480,7 @@
     <!--====== FOOTER PART START ======-->
 
     <footer id="footer" class="footer_area gray-bg pt-115 pb-120" style="box-shadow: 0px 0px 10px 0px rgba(196, 196, 196, 0.3);
-        background-color: #DDB060;">
+        background-color: #93673E;">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -505,7 +506,7 @@
                         </ul>
                         <center>
                             <p class="credit pt-45" style="color:white ; padding-left: 30px;">&copy; All rigths reserved
-                                <a href="#" rel="nofollow">Asad</a>
+                                <a href="#" rel="nofollow" style="color: white">Asad</a>
                         </center>
                         </p>
                     </div> <!-- footer content -->
